--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,31 +1,23 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button
-        type="button"
-        class="navbar-toggle"
-        (click)="collapsed = !collapsed"
-      >
+      <button type="button" class="navbar-toggle" (click)="collapsed = !collapsed">
         <span class="icon-bar" *ngFor="let iconBar of [1, 2, 3]"></span>
       </button>
       <a routerLink="/" class="navbar-brand">Recipe Book</a>
     </div>
     <hr />
-    <div
-      class="navbar-collapse"
-      [class.collapse]="collapsed"
-      (window:resize)="collapsed = true"
-    >
+    <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
       <ul class="nav navbar">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
+        <li>
+          <a href="#" (click)="onSelect('shopping-list')">Shopping List</a>
+        </li>
       </ul>
 
       <ul class="nav nav-navbar navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" role="button"
-            >Manage Data<span class="caret"></span
-          ></a>
+          <a href="#" class="dropdown-toggle" role="button">Manage Data<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Save Data</a></li>
             <li><a href="#">Fetch Data</a></li>
@@ -34,4 +26,14 @@
       </ul>
     </div>
   </div>
+  <p appBasicHighlight>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime accusantium
+    molestias rem ex ipsum ea nesciunt vero animi beatae et nostrum eveniet
+    similique hic laborum, itaque, unde neque deserunt assumenda.
+  </p>
+  <p [appBetterHighlight]="'grey'" defaultColor="yellow">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime accusantium
+    molestias rem ex ipsum ea nesciunt vero animi beatae et nostrum eveniet
+    similique hic laborum, itaque, unde neque deserunt assumenda.
+  </p>
 </div>
